<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="none">

        <item
            android:id="@+id/about_us"
            android:title="@string/about_us"
            android:icon="@drawable/ic_baseline_group_24"
            />

        <item
            android:id="@+id/privacy"
            android:title="@string/privacy"
            android:icon="@drawable/ic_baseline_policy_24"
            />

    </group>

    <item android:title="Account">
        <menu>

            <item
                android:id="@+id/language"
                android:title="@string/change_language"
                android:icon="@drawable/ic_twotone_translate_24" />

            <item
                android:id="@+id/log_out"
                android:title="@string/log_out"
                android:icon="@drawable/ic_outline_exit_to_app_24" />

        </menu>

    </item>

</menu>