<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_bg"
    android:paddingVertical="30dp"
    android:gravity="center">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Waiting for your OTP :"
        android:textSize="25sp"
        android:textColor="#212121"
        android:gravity="center"
        android:fontFamily="@font/oxygen_ex_bold"
        android:padding="5dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="5dp">
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/please_don_t_press_back"
            android:paddingStart="10dp"
            android:fontFamily="@font/oxygen_bold"
            android:paddingEnd="20dp"/>
    </LinearLayout>

    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="fitCenter"
        app:lottie_loop="true"
        app:lottie_autoPlay="true"
        app:lottie_fileName="15379-hive-app-animation-02.json"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="15sp"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_otp"
            android:padding="5sp"
            android:gravity="center"
            android:textColor="#212121"
            android:fontFamily="@font/oxygen_bold"
            android:textSize="20dp"/>

        <EditText
            android:id="@+id/otp_dialog"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:inputType="number"
            android:maxLength="6"
            android:fontFamily="monospace"
            android:digits="0123456789"
            android:textSize="20dp"
            android:letterSpacing="2"
            android:padding="5dp"/>

        <View
            android:layout_width="200dp"
            android:layout_height="1dp"
            android:background="#878787"/>

    </LinearLayout>
    <TextView
        android:id="@+id/verify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/verify"
        android:gravity="end"
        android:padding="10dp"
        android:layout_marginHorizontal="10dp"
        android:textColor="@color/colorPrimaryDark"/>

</LinearLayout>